# OpenGL-Template

./: .gitmodules  CMakeLists.txt
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: CMakeLists.txt  camera.cpp  camera.h  lights.cpp  lights.h  main.cpp  main.h  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  shader.cpp  shader.h
src/shaders/: basicFrag.fs  basicVert.vs  pointLight.fs  pointLight.vs
stb/: CMakeLists.txt
